[gd_scene load_steps=9 format=3 uid="uid://ciaj2edwf0e0c"]

[ext_resource type="Script" uid="uid://c1h0q4kcxomc8" path="res://src/actors/enemies/_controllers/enemy_control_ui.gd" id="1_ck4s7"]
[ext_resource type="FontFile" uid="uid://cs7pj0a4nowjm" path="res://assets/fonts/alagard.ttf" id="3_hvx7y"]
[ext_resource type="Texture2D" uid="uid://en2ws0o3r862" path="res://assets/ui/user_interface.png" id="3_pn8ds"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rtbkc"]
atlas = ExtResource("3_pn8ds")
region = Rect2(64, 336, 260, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvx7y"]
bg_color = Color(0.0941176, 0.0941176, 0.105882, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ck4s7"]
texture = ExtResource("3_pn8ds")
region_rect = Rect2(64, 441, 260, 12)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1jutp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1jutp"]
texture = ExtResource("3_pn8ds")
region_rect = Rect2(64, 368, 260, 12)

[node name="EnemyControlUI" type="Control"]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ck4s7")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(196, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -19.0
offset_right = 98.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatusEffectList" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="EnemyLevel" type="Label" parent="VBoxContainer/MainContainer"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_hvx7y")
text = "Lv 100"

[node name="HealthBarContainer" type="TextureRect" parent="VBoxContainer/MainContainer"]
texture_filter = 3
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
texture = SubResource("AtlasTexture_rtbkc")
expand_mode = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="HealthBarBG" type="ProgressBar" parent="VBoxContainer/MainContainer/HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hvx7y")
theme_override_styles/fill = SubResource("StyleBoxTexture_ck4s7")
value = 100.0
show_percentage = false
metadata/_edit_lock_ = true

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/MainContainer/HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_1jutp")
theme_override_styles/fill = SubResource("StyleBoxTexture_1jutp")
value = 100.0
show_percentage = false
metadata/_edit_lock_ = true
